--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,16 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.properties
+*.lock
+*.bin
+*.xml
+*.kts
+*.kotlin_module
+*.tab
+*.keystream
+*.len
+*.at
+*.tab_i
+*.bat
+DerivativeSearch/gradlew
